2005-01-01  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/library.rb:

	Fix a bug where importing an ISBN list file would cause a crash when
	an ISBN in the list did not have a cover image.

2004-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Takayuki.
	
2004-12-15  Takayuki Kusano  <AE5T-KSN@asahi-net.or.jp>

	* lib/alexandria/library.rb:

	Improved the ISBN-list import code to support EAN.

2004-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/import_dialog.rb,
	  lib/alexandria/ui/export_dialog.rb,
	  lib/alexandria/library.rb:

	- Changed the Tellico archive file extention from 'bc' to 'tc' ;
	- In the export dialog, in case the user tries to use a library name
	  that is already used, grab the focus on the library name text field
	  after the alert message.

2004-12-14  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Removed points that have been implemented.

	* data/alexandria/glade/book_properties_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:

	Introduced very basic loaning support (is the book borrowed?,
	who borrowed it? and when?).

2004-11-08  Dafydd Harries  <daf@muse.19inch.net>

	* post-install.rb:

	Don't do anything if ENV['GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL'] is
	set. This makes it easier to build the package without gconftool-2
	being installed.

2004-11-05  Dafydd Harries  <daf@muse.19inch.net>

	* pre-setup.rb:

	Raise an exception if msgfmt failed.

=== Alexandria 0.4.0 ===

2004-11-05  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS,
	  README:

	Updated for 0.4.0.

	* lib/alexandria/library.rb:

	- Tellico Import: check for either 'bookcase.xml' or 'tellico.xml' 
	  as the XML file ;
	- Tellico Import: check for either 'bookcase' or 'tellico' as the
	  root element inside the XML ;